[package]
name = "spookylock"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
spookylock-sys = { path = "../spookylock-sys" }
termion = "1.5.4"
cursive = { version = "^0.13", features = ["termion-backend"], default-features = false }
pam = "^0.7"
